// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a single expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container page-header-flex"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       
      expenses 
       totalling 
      <span>
        $400.00
      </span>
    </h1>
    <div>
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container page-header-flex"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        4
      </span>
       
      expenses 
       totalling 
      <span>
        $10,023.00
      </span>
    </h1>
    <div>
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
